--- a/PART-2_BROWSER/19_PROJECT-pixel-art-editor/index.html
+++ b/PART-2_BROWSER/19_PROJECT-pixel-art-editor/index.html
@@ -1,8 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <script src="code/chapter/19_paint.js"></script>
 
 <div></div>
 <script>
-  document.querySelector("div")
-    .appendChild(startPixelEditor({}));
+  document.querySelector("div").appendChild(startPixelEditor({}));
 </script>
